--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 6767",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 6767",
     "lint": "next lint"
   },
   "dependencies": {
+    "@thatapicompany/thecatapi": "^1.0.2",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
